force-app/main/default/objects/MUSW__Fee_Payment__c/fields/BGBK__Cart__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cart used to make this fee payment</description>
    <label>Cart</label>
    <referenceTo>BGBK__Cart__c</referenceTo>
    <relationshipLabel>Fee Payments</relationshipLabel>
    <relationshipName>Fee_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>