force-app/main/default/objects/MUSW__Fee_Payment__c/fields/Fee_Cash_Code__c.field-meta.xml
<CustomField>
    <fullName>Fee_Cash_Code__c</fullName>
    <formula>MUSW__Fee__r.Acc_Cash_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Cash Code</label>
    <type>Text</type>
</CustomField>