force-app/main/default/objects/MUSW__Fee_Payment__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <formula>Text(MUSW__Fee__r.MUSW__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Type</label>
    <type>Text</type>
</CustomField>