force-app/main/default/objects/MUSW__Fee_Payment__c/fields/MUSW__Fee_Current_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fee_Current_Amount_Outstanding__c</fullName>
    <description>Current outstanding amount of the Fee.</description>
    <formula>MUSW__Fee__r.MUSW__Outstanding_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Outstanding amount of Fee as of now</inlineHelpText>
    <label>Fee Current Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>