force-app/main/default/objects/MUSW__Fee_Payment__c/fields/MUSW__Receipt_Amount_Available__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Receipt_Amount_Available__c</fullName>
    <description>Deprecated</description>
    <label>Receipt Amount Available</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>