force-app/main/default/objects/MUSW__Fee_Payment__c/fields/Payment_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Source__c</fullName>
    <formula>BGBK__Payment__r.BGBK__Payment_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Source</label>
    <type>Text</type>
</CustomField>