force-app/main/default/objects/MUSW__Fee_Payment__c/fields/Related_to__c.field-meta.xml
<CustomField>
    <fullName>Related_to__c</fullName>
    <formula>MUSW__Fee__r.Related_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related to</label>
    <type>Text</type>
</CustomField>