force-app/main/default/objects/MUSW__Fee_Payment__c/validationRules/BGBK__Payment_greater_than_Fee_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Payment_greater_than_Fee_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>MUSW__Payment_Amount__c &gt; MUSW__Fee_Amount__c</errorConditionFormula>
    <errorMessage>Applied Payment amount must be less than or equal to the Fee Amount</errorMessage>
</ValidationRule>